tests/regression/error/circular_types.lus
type one = { blah: two } ;

type two = one ;